# sfc_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docker/: Dockerfile  README.md  build_image.sh  run_container.sh
docs/: setup_deps.md
include/: safe_flight_corridor.h
src/: compare_iterations.cpp  main.cpp  sfc_admm.cpp  sfc_bounding_box.cpp  sfc_ellipsoids.cpp  sfc_path.cpp  sfc_ros_node.cpp  sfc_visualize.cpp  true_sfc_.cpp
